--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      best online food delivery service in pakistan | myonlinemeal.com
-    </title>
+    <meta http-equiv="x-UA-compatable" content="ie=edge" />
+    <title> best online food delivery service in pakistan | myonlinemeal.com</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" media="screen and (max-width:1170px)" href="css/phone.css" />
     <style></style>
   </head>
   <section>
@@ -16,10 +16,10 @@
         <img src="img/logo image.jpg" alt="myonlinemeal.com" />
       </div>
       <ul>
-        <li class="iogo image.jpgtem"><a href="#">home</a></li>
-        <li class="item"><a href="#">services</a></li>
-        <li class="item"><a href="#">about us </a></li>
-        <li class="item"><a href="#">contact us</a></li>
+        <li class="iogo image.jpgtem"><a href="#home">home</a></li>
+        <li class="item"><a href="#services-container">services</a></li>
+        <li class="item"><a href="#client-section">our clients </a></li>
+        <li class="item"><a href="#contact">contact us</a></li>
       </ul>
     </nav>
   </section>
@@ -67,9 +67,6 @@
         <img src="img/logo2.jpg" alt="our client">
       </div>
       <div class="client-item">
-        <img src="img/logo1.jpg" alt="our client">
-      </div>
-      <div class="client-item">
         <img src="img/logo4.jpg" alt="our client">
       </div>
       <div class="client-item">
@@ -83,20 +80,20 @@
     <div id="contact-box">
       <form action="">
         <div class="form-group">
-          <label for="name">name:</label>
+          <label for="name">name        :</label>
           <input type="text" name="name" id="name" placeholder="enter your name">
         </div>
         <div class="form-group">
           <label for="name">email:</label>
-          <input type="text" name="name" id="name" placeholder="enter your name">
+          <input type="email" name="name" id="name" placeholder="enter your email">
         </div>
         <div class="form-group">
-          <label for="name">phone number:</label>
-          <input type="text" name="name" id="name" placeholder="enter your name">
+          <label for="name"> phone number:</label>
+          <input type="phone" name="name" id="name" placeholder="enter your phone number">
         </div>
         <div class="form-group">
           <label for="name">message:</label>
-          <textarea name="message" id="message"></textarea>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
         </div>
       </form>
     </div>
